<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wojciech.jasiewiczwojciech.MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="right" >

        <LinearLayout
            android:id="@+id/layout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/welcome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Introduction"
                android:textSize="20dp"
                android:id="@+id/introduction" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="20dp"
                android:id="@+id/tv0" />

            <TableLayout
                android:id="@+id/table2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableLayout>

            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/mtv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="20dp"
                android:id="@+id/tv1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="20dp"
                android:id="@+id/tv2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="20dp"
                android:id="@+id/tv3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"

                android:ems="10"
                android:id="@+id/et3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textSize="20dp"
                android:id="@+id/tv4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"

                android:ems="10"
                android:id="@+id/et4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check Answers"
                android:id="@+id/button2"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="31dp"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log out"
                android:id="@+id/logoutButton"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=" "
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close application"
                android:id="@+id/button4"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
